--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 * {
     margin: 0%;
     padding: 0%;
-    width: 100%;
-    
+    max-width: 100vw;
 }
 
 body {
     background-color: #131313;
-    width: 100%;
+    max-width: 100vw;
     height: 100vh;
 }
 
@@ -105,6 +104,11 @@ body {
 .cover_img {
     width: 100%;
     opacity: 30%;
+}
+
+.cover_img img {
+    min-width: 100%;
+    min-height: 100vh;
 }
 
 .desc {
