--- a/style.css
+++ b/style.css
@@ -18,28 +18,15 @@ body {
     justify-content: space-around;
     height: 83px;
     background-color: #131313;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 11px;
+    align-items: center; 
 }
-
 
 .start {
-    display: flex;
-    align-items: center;
-    max-width: fit-content;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 11px;
     color: #E3B873;
     text-transform: uppercase;
-    /* left: 646px; */
-}
-
-.center {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    max-width: fit-content;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 11px;
+    cursor: pointer;
 }
 
 .center ul>li:first-child {
@@ -47,37 +34,31 @@ body {
 }
 
 .center ul>li {
-    display: inline;
     padding: 0px 20px 0px 20px;
     list-style-type: none;
     color: #ffffff;
+    cursor: pointer;
 }
 
 .end {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    max-width: fit-content;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 11px;
-    flex-wrap: nowrap;
+    cursor: pointer;
 }
 
+ul {
+    display: flex;
+    align-items: center;
+}
 .end ul li {
     list-style-type: none;
-    display: inline;
     color: #ffffff;
 }
 
-.end ul .button {
+.button {
     padding: 10.5px 17px;
     background-color: #E3B873;
     color: #ffffff;
     border-radius: 3px;
     margin-left: 20px;
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 11px;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -128,13 +109,14 @@ body {
 
 .main_block {
     position: relative;
-    background-color: #131313;
-    background-image: url(img\main-cover.png);
+    background-color: rgba(0, 0, 0, 0.682);
+    background-image: url(img/main-cover.png);
+    background-blend-mode: darken;
     background-size: cover;
     background-position: center;
+    min-width: 100vw;
+    min-height: 100vh;
 }
-
-
 
 /* IMG STUFF END */
 
@@ -150,12 +132,20 @@ body {
     justify-content: center;
 }
 
+.buttons {
+    display: flex;
+}
+
 .button1 {
     margin-right: 20px;
     width: 207px;
     Height: 51px;
     Width: 207px;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
+}
+
+btn_cnfg {
+    
 }
 
 .button2 {
@@ -171,7 +161,7 @@ body {
     background: none;
 }
 
-.button1>a, .button2>a {
+.buttons>a {
     font-family: 'Nunito Sans';
     font-style: italic;
     font-weight: 400;
@@ -179,10 +169,7 @@ body {
     line-height: 15px;
     text-decoration: none;
     color: #FFFFFF;
+    margin-top: 20px;
 }
 
-.buttons {
-    margin-top: 20px;
-    display: flex;
-}
 /* BUTTON STUFF END */
