--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ ul {
     width: fit-content;
 }
 
+.end a {
+    color: #E3B873;
+}
+
 /* NAVIGATION END */
 
 /* TEXT BLOCK START*/
@@ -136,40 +140,35 @@ ul {
     display: flex;
 }
 
+.btn_cnfg {
+    line-height: 15px;
+    font-weight: 400;
+    Width: 207px;
+    Height: 51px;
+}
+
 .button1 {
     margin-right: 20px;
-    width: 207px;
-    Height: 51px;
-    Width: 207px;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
 }
 
-btn_cnfg {
-    
-}
-
 .button2 {
-    font-family: 'Nunito Sans';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 11px;
-    line-height: 15px;
     color: #FFFFFF;
     border: 1px solid #FFFFFF;
-    Width: 207px;
-    Height: 51px;
     background: none;
 }
 
 .buttons>a {
-    font-family: 'Nunito Sans';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 11px;
     line-height: 15px;
     text-decoration: none;
     color: #FFFFFF;
     margin-top: 20px;
+}
+
+.txt_style {
+    font-family: 'Nunito Sans';
+    font-style: italic;  
+    font-size: 11px;
 }
 
 /* BUTTON STUFF END */
