--- a/style.css
+++ b/style.css
@@ -29,19 +29,18 @@ body {
     cursor: pointer;
 }
 
-.center ul>li:first-child {
-    color: #E3B873;
+.center ul li {
+    padding-left: 20px;
+    list-style: none;
 }
 
-.center ul>li {
-    padding: 0px 20px 0px 20px;
-    list-style-type: none;
+.center ul li a {
     color: #ffffff;
-    cursor: pointer;
+    text-decoration: none;
 }
 
-.center ul>a {
-    text-decoration: none;
+body header .navigation .center ul li #home {
+    color: #E3B873;
 }
 
 .end {
@@ -78,6 +77,7 @@ ul {
 
 /* TEXT BLOCK START*/
 .title {
+    min-width: 13em;
     font-family: 'Yeseva One';
     font-style: normal;
     font-weight: 400;
@@ -93,10 +93,11 @@ ul {
 
 .desc {
     position: absolute;
-    top: 30%;
+    height: fit-content;
+    top: 20%;
     left: 9.31%;
     right: 43.74%;
-    bottom: 51.65%;
+    bottom: 20%;
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 400;
