--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@
 
 .fourth_step {
     background-color: #fff;
+    height: auto;
 }
 
  .first_step .content_of_first_section {
@@ -112,7 +113,7 @@
  }
 
  .content_of_third_section {
-     height: 100vh;   
+     height: auto;   
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -351,10 +352,6 @@
         padding-left: 30px;
      }
 
-    .fourth_step {
-        display: block;
-    }
-
     .gallery {
         display: flex;
         margin-top: 3em;
@@ -367,16 +364,37 @@
     }
 
     .desc1 {
+        max-width: 23em;
+        height: 20em;
         display: flex;
-        position: absolute;
+        position: relative;
         flex-direction: column;
         background-color: #fff;
-        padding: 2em 4em;
-        top: 20em;
-        left: 2em;
+        padding: 1em 4em;
+        top: -11em;
+        left: 1.5em;
         justify-content: flex-start;
+        box-shadow: 1px 1px 30px #1313130d;
     }
 
     .redecorating {
+        position: relative;
+        font-size: medium;
+        right: 1em;
+        text-transform: capitalize;
+    }
+
+    .desc1 ul li {
+        line-height: 2em;
+        color: #13131341;
+    }
+
+    .btn_desc1 {
+        margin-bottom: 5px;
+        padding: 10px 17px;
+        left: 0;
+        position: absolute;
+        bottom: -2em;
+        border-radius: 0%;
         font-size: medium;
     }
