trying to find out how to make it right

--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
  .header_nav {
      width: 100%;
      background-color: #131313;
+     font-size: 1em;
  }
 
  .header_nav .header_content {
+    font-size: 0.8em;
      display: flex;
-     max-width: 1440px;
+     max-width: 1400px;
      height: 85px;
      margin: 0px auto;
      align-items: center;
@@ -21,6 +23,7 @@
 
  .header_nav li{
      list-style: none;
+     font-size: 0.8em;
      display: inline;
      margin-left: 50px;
  }
@@ -58,46 +61,95 @@
      color: #E3B873;
  }
 
+ .buttons {
+    display: flex;
+    max-width: 33em;
+    gap: 1em;
+}
+
 .gold-button {
     color: aliceblue;
     background-color: #E3B873;
     padding: 10px 30px;
-    border-radius: 5px;
+    border-radius: 2px;
     border: none;
     text-transform: uppercase;
+    /* padding: 0.5em 2em; */
  }
 
- .dick {
-    max-width: 250px;
-    padding: 20px 40px;
- }
+ .calc, .sub {
+    background-color: #E3B873;
+    height: 5em;
+    width: 32em;
+    border: none;
+    border-radius: 0.1em;
+}
 
- .first_step {
-     background: rgba(0, 0, 0, 0.7) url("img/main-cover.png");
-     background-blend-mode: darken;
-     width: 100vw;
-     height: 100vh;
-     background-size: cover;
- }
+.empty {
+    background-color: #00000000;
+    border: #fff solid 0.2em;
+}
 
- .second_step, .third_step, .fourth_step, .sixth_step {
+ .opacity-button {
+    max-width: 249px;
+    border-color: white;
+    border-radius: 2px;
+    color: aliceblue;
+    border-style: solid;
+    border-width: 2px;
+    background-color: #f0f8ff00;
+    padding: 2em 3em;
+}
+
+ .first_step, .second_step, .third_step, .fourth_step, .sixth_step, .seventh_step, .final_section  {
      background-color: #131313;
      width: 100vw;
      height: 100vh;
  }
 
- .second_step {
-    height: 80vh;
+ .first_step {
+    background: rgba(0, 0, 0, 0.7) url("img/main-cover.png");
+    background-blend-mode: darken;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+}
+
+.second_step {
+    padding-top: 5em;
+    height: 67vh;
+}
+
+ .seventh_step {
+     position: relative;
+     min-height: 100vh;
+     margin-top: 6em;
+
  }
 
-.fourth_step {
+ .seventh_step::before {
+     content: "";
+     position: absolute;
+     top: 0px;
+     right: 0px;
+     bottom: 0px;
+     left: 0px;
+     opacity: 0.05;
+     background-image: url(img/city.svg);
+     background-position: bottom;
+     background-repeat: repeat-x; 
+ }
+
+ .final_section {
+     background: rgba(0, 0, 0, 0.85) url("img/building.png");
+     background-blend-mode: darken;
+     background-size: cover;
+ }
+
+.fourth_step, .seventh_step  {
     background-color: #fff;
     height: auto;
 }
-
-/* .sixth_step {
-    background-color: #fff;
-} */
 
  .first_step .content_of_first_section {
      max-width: 1440px;
@@ -108,12 +160,16 @@
      padding-left: 30px;
  }
 
- .content_of_second_section, .content_of_third_section, .content_of_fourth_section, .content_of_fifth_step, .content_of_sixth_step {
+ .content_of_second_section, .content_of_third_section, .content_of_fourth_section, .content_of_fifth_step, .content_of_sixth_step, .content_of_seventh_step, .content_of_final_section {
     max-width: 1440px;
     margin: auto;
     padding-top: 5rem;
     position: relative;
-    padding-left: 30px;
+    padding: 0 1rem;
+ }
+
+ .content_of_second_section {
+     height: auto;
  }
 
  .content_of_third_section {
@@ -126,19 +182,20 @@
  .background_of_third_step {
     background-image:linear-gradient(to bottom, 
     #131313 0%,
-    #131313 45%,
-    #fff 45%,
+    #131313 33%,
+    #fff 33%,
     #fff 100%
     );
  }
 
  .content_text {
-     display: flex;
-     flex-direction: column;
-     justify-content: space-around;
-     max-width: 500px;
-     height: 150px;
-     color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    justify-content: space-around;
+    max-width: 35em;
+    height: auto;
+    color: aliceblue;
  }
 
 .gold-text {
@@ -159,6 +216,10 @@
     font-style: normal;
 }   
 
+.third_step {
+    height: auto;
+}
+
  .header-text {
     font-family: 'Yeseva One';
     font-style: normal;
@@ -167,26 +228,9 @@
     line-height: 37px;
     text-transform: uppercase;
  }
-
- .buttons {
-    padding: 25px 0;
-    display: flex;
-    max-width: 28em;
-    justify-content: space-between;
-}
-
- .opacity-button {
-        max-width: 249px;
-        border-color: white;
-        border-radius: 5px;
-        color: aliceblue;
-        border-style: solid;
-        border-width: 2px;
-        padding: 11px;
-        background-color: #f0f8ff00;
-    }
  
 .Completed_projects {
+    gap: 2em;
     height: 20em;
     margin-top: 3em;
     display: flex;
@@ -211,6 +255,11 @@
     text-transform: uppercase;
 }
 
+.monitor {
+    font-size: 1.1em;
+    line-height: 2.1em;
+}
+
 .column1, .column2 {
     display: flex;
     flex-direction: column;
@@ -224,7 +273,7 @@
 }
 
 .nav_of_second_section  {
-    left: 2.4em;
+    left: 0.9em;
     position: relative;
     font-size: medium;
     top: 1em;
@@ -341,7 +390,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-            margin-top: 10em;
     }
 
     .content_of_fourth_section {
@@ -349,12 +397,12 @@
         margin: auto;
         padding-top: 5rem;
         position: relative;
-        padding-left: 30px;
      }
 
     .gallery {
         display: flex;
         margin-top: 3em;
+        height: auto;
         flex-direction: row;
         justify-content: space-around;
     }
@@ -422,7 +470,6 @@
         position: relative;
         display: flex;
         justify-content: space-around;
-        right: -5em;
     }
 
     .form_of_fifth {
@@ -499,10 +546,11 @@
     }
 
     .sixth_step {
-        background: rgba(0, 0, 0, 0.7) url("img/fantasies.png");
+        background: rgba(0, 0, 0, 0.8) url("img/fantasies.png");
         background-blend-mode: darken;
         background-size: cover;
         margin-top: 20em;
+        height: 57em;
     }
 
     .header_of_sixth_section {
@@ -513,27 +561,23 @@
     .content_of_sixth_step {
         flex-wrap: wrap;
         gap: 15em;
-        padding: 0px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         height: inherit;
     }
 
-    .list_of_arch_styles li{
+    .list_of_arch_styles li {
         list-style-type: none;
-        line-height: 3em;
-        font-size: 1.2em;
+        line-height: 2.4em;
+        font-size: 1.5em;
     }
 
     .first_col_of_six_step {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
-    }
-
-    .content_of_sixth_step {
-        flex-direction: ;
+        gap: 3em;
     }
 
     .arch {
@@ -558,4 +602,164 @@
     .second_col {
         position: relative;
         top: -5em
+    }
+
+    .our_clients {
+        text-transform: uppercase;
+    }
+
+    .header_of_seventh_section {
+        margin-top: 1em;
+        height: auto;
+        gap: 1.5em;
+    }
+
+    .desc_of_h_7th {
+        display: flex;
+        justify-content: center;
+    }
+    .desc_of_h_7th p {
+        max-width: 21em;
+        text-align: center;
+    }
+
+    .seventh_gallery {
+        margin-top: 2em;
+        display: flex;
+        gap: 3em;
+        height: auto;
+    }
+
+    .seventh_gallery {
+        display: flex;
+        justify-content: center;
+    }
+
+    .people {
+        display: flex;
+        padding-left: 1em;
+        min-width: 16em;
+        gap: 1em;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        line-height: 1.5em;
+    }
+
+    .desc2 {
+        max-width: 25em;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        padding: 1.5em 1.5em;
+        justify-content: flex-start;
+        align-items: flex-start;
+        box-shadow: 1px 1px 30px #1313130d;
+        gap: 2em;
+    }
+
+    .people_desc {
+        color: #1313134a;
+    }
+
+    .btn_conteiner {
+        display: flex;
+        align-items: center;
+        gap: 0.2em;
+        justify-content: flex-start;
+        position: relative;
+        bottom: -3.5em;
+        left: 0em;
+        left: -1.5em;
+    }
+
+    .btn_desc2 {
+        min-width: 10em;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1em;
+        border-radius: 0em;
+        font-size: small;
+    }
+
+    .content_of_final_section {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        gap: 3em;
+        position: relative;
+        top: -18em;
+    }
+
+    .form_of_final {
+        min-width: 60em;
+        height: auto;
+    }
+
+    .form_wrapper {
+        justify-content: space-between;
+        display: flex;
+        flex-flow: row wrap;
+        max-width: 30em;
+        gap: 3em;
+    }
+
+    .final_input {
+        max-height: 3em;
+    }
+
+    .new_line {
+        flex-basis: 100%;
+    }
+
+    .final_button {
+        max-width: fit-content;
+    }
+
+    .content_of_final_form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        gap: 3em;
+    }
+
+    .button-wrapper {
+        display: flex;
+        justify-content: center;
+        width: 30em;
+    }
+
+    .final_check {
+        justify-content: center;
+        width: 30em;
+    }
+
+    .sm {
+        display: flex;
+        max-width: 100vw;
+        justify-content: center;
+    }
+
+    .logo-bottom {
+        font-style: normal;
+    }
+
+    .map {
+        height: auto;
+    }
+
+    .lead-header {
+        min-width: max-content;
+        font-size: 3em;
+        line-height: inherit;
+    }
+
+    .lead-text {
+        min-width: 22em;
+        font-size: 1.7em;
     }
