--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@
 
  .header_nav {
      width: 100%;
+     min-width: 1440px;
      background-color: #131313;
-     font-size: 1em;
  }
 
- .header_nav .header_content {
-    font-size: 0.8em;
+.header_content  {
+     font-size: 0.8em;
      display: flex;
+     padding: 0 1em;
      max-width: 1400px;
+     min-width: 1440px;
      height: 85px;
      margin: 0px auto;
      align-items: center;
@@ -25,17 +27,7 @@
      list-style: none;
      font-size: 0.8em;
      display: inline;
-     margin-left: 50px;
- }
-
- .nav_of_second_section{
-     display: flex;
-     width: inherit;
-     position: relative;
-     right: 5em;
-     justify-content: flex-end;
-     padding-right: 2em;
-     top: 4em;
+     margin-left: 1.5em;
  }
 
  .nav_of_second_section li{
@@ -57,8 +49,11 @@
     color:#E3B873;
  }
 
- .end_nav li:first-of-type {
-     color: #E3B873;
+ .end_nav {
+     display: flex;
+     flex-direction: row;
+     gap: 1em;
+     align-items: center;
  }
 
  .buttons {
@@ -101,28 +96,32 @@
     padding: 2em 3em;
 }
 
- .first_step, .second_step, .third_step, .fourth_step, .sixth_step, .seventh_step, .final_section  {
+
+.first_step, .second_step, .third_step, .fourth_step, .sixth_step, .seventh_step, .final_section, footer  {
      background-color: #131313;
      width: 100vw;
      height: 100vh;
+     min-width: 1440px;
  }
 
  .first_step {
     background: rgba(0, 0, 0, 0.7) url("img/main-cover.png");
     background-blend-mode: darken;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 60em;
     background-size: cover;
+    display: flex;
+    align-items: center;
 }
 
 .second_step {
-    padding-top: 5em;
-    height: 67vh;
+    padding: 5em 0;
+    height: auto;
 }
 
  .seventh_step {
      position: relative;
-     min-height: 100vh;
+     min-height: 70em;
      margin-top: 6em;
 
  }
@@ -144,6 +143,7 @@
      background: rgba(0, 0, 0, 0.85) url("img/building.png");
      background-blend-mode: darken;
      background-size: cover;
+     height: 60em;
  }
 
 .fourth_step, .seventh_step  {
@@ -151,25 +151,27 @@
     height: auto;
 }
 
- .first_step .content_of_first_section {
-     max-width: 1440px;
-     margin: auto;
-     display: flex;
-     align-items: center;
-     height: inherit;
-     padding-left: 30px;
- }
 
- .content_of_second_section, .content_of_third_section, .content_of_fourth_section, .content_of_fifth_step, .content_of_sixth_step, .content_of_seventh_step, .content_of_final_section {
+ .content_of_first_section, .content_of_second_section, .content_of_third_section, .content_of_fourth_section, .content_of_fifth_step, .content_of_sixth_step, .content_of_seventh_step, .content_of_final_section, .content_of_footer {
     max-width: 1440px;
+    min-width: 1440px;
     margin: auto;
-    padding-top: 5rem;
-    position: relative;
     padding: 0 1rem;
  }
 
+ .content_of_first_section {
+    display: flex;
+    align-items: center;
+    height: auto;
+    padding-left: 30px;
+}
+
  .content_of_second_section {
-     height: auto;
+    gap: 4em;
+    flex-wrap: wrap;
+    height: auto;
+    display: flex;
+    justify-content: center;
  }
 
  .content_of_third_section {
@@ -192,14 +194,16 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
-    justify-content: space-around;
-    max-width: 35em;
     height: auto;
-    color: aliceblue;
+    color: #fff;
  }
 
 .gold-text {
      color: #E3B873;
+ }
+
+ .content_of_seventh_step {
+     height: auto;
  }
 
  .common-font {
@@ -218,6 +222,7 @@
 
 .third_step {
     height: auto;
+    background-color: #fff;
 }
 
  .header-text {
@@ -231,7 +236,7 @@
  
 .Completed_projects {
     gap: 2em;
-    height: 20em;
+    height: auto;
     margin-top: 3em;
     display: flex;
     flex-direction: column;
@@ -239,17 +244,16 @@
     max-width: 30em;
 }
 
-.discription {
+.description {
     color: aliceblue;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    height: 100px;
-    max-width: 25em;
+    height: auto;
     line-height: 26.73px;
 }
 
-.discription h3 {
+.description h3 {
     color: #E3B873;
     font-style: normal;
     text-transform: uppercase;
@@ -267,16 +271,12 @@
     height: 10em;
 }
 
-.slider {
-    position: absolute;
-    right: 5em;
-}
-
-.nav_of_second_section  {
-    left: 0.9em;
-    position: relative;
+.nav_of_second_section{
+    width: inherit;
+    display: flex;
+    flex-basis: 82em;
     font-size: medium;
-    top: 1em;
+    justify-content: flex-end;
 }
 
 .nav_of_second_section ul li:first-of-type {
@@ -290,11 +290,6 @@
     border-color: #E3B873;
     padding-bottom: 0.7em;
     border-width: 1.5px;
-}
-
-.slider_arrows {
-    position: relative;
-    top: 5em;
 }
 
 .about_camera {
@@ -754,12 +749,32 @@
     }
 
     .lead-header {
-        min-width: max-content;
-        font-size: 3em;
+        font-size: 2.5em;
         line-height: inherit;
     }
 
     .lead-text {
-        min-width: 22em;
-        font-size: 1.7em;
+        font-size: 1.5em;
+    }
+
+    footer {
+        height: auto;
+        padding: 5em 0;
+    }
+
+    .content_of_footer {
+        display: flex;
+        gap: 3em;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content_of_footer li {
+        display: inline-block;
+        list-style-type: none;
+    }
+
+    .mid_nav {
+        display: flex;
+        gap: 3em;
     }
